# bayes-brain

./: .coverage  .gitignore  CHANGELOG.md  CONTRIBUTING.md  README.md  demo.py  pyproject.toml  test_mcp_bandit_admin.db-shm
.github/workflows/: ci.yml  publish.yml
src/bayes_brain/: __init__.py  embeddings.py  mcp_server.py  router.py  storage.py
src/bayesian_cortex/: __init__.py  embeddings.py  exceptions.py  mcp_server.py  rag.py  router.py  storage.py
tests/: test_async.py  test_batch.py  test_concurrency_stress.py  test_core_coverage.py  test_cryptographic_validation.py  test_embeddings.py  test_hierarchical.py  test_hybrid_bandits.py  test_linear_bandits.py  test_mcp_server.py  test_outlier_detection.py  test_rag.py  test_router.py  test_simulation_harness.py  test_storage.py  test_unified.py
