[project]
name = "bayesian_cortex"
version = "0.1.3"
description = "Dynamic Agent Routing via Contextual Multi-Arm Bayesian Bandits"
readme = "README.md"
authors = [
    { name = "Sam Tritto", email = "59342606+sam-tritto@users.noreply.github.com" }
]
requires-python = ">=3.11"
dependencies = [
    # Core math — always required
    "numpy>=1.24.0",
    "scipy>=1.10.0",
]

[project.optional-dependencies]
# Persistent SQLite storage (SQLiteStorage / AsyncSQLiteStorage)
sqlite = [
    "aiosqlite>=0.19.0",
]
# Native ANN vector search in SQLite (SQLiteVectorStore / AsyncSQLiteVectorStore)
sqlite-vec = [
    "sqlite-vec>=0.1.0",
    "aiosqlite>=0.19.0",
]
# Redis storage backends (RedisStorage / AsyncRedisStorage)
redis = [
    "redis>=5.0.0",
]
# Async HTTP for GeminiEmbedder / OpenAIEmbedder async methods
async-embeddings = [
    "httpx>=0.24.0",
]
# MCP server integration
mcp = [
    "mcp>=0.1.0",
    "aiosqlite>=0.19.0",
]
# Local sentence-transformers embedder
local-ml = [
    "sentence-transformers>=2.2.0",
]
# Everything at once
all = [
    "aiosqlite>=0.19.0",
    "sqlite-vec>=0.1.0",
    "redis>=5.0.0",
    "httpx>=0.24.0",
    "mcp>=0.1.0",
    "sentence-transformers>=2.2.0",
]

[project.urls]
Homepage = "https://github.com/sam-tritto/bayesian-cortex"
Repository = "https://github.com/sam-tritto/bayesian-cortex"
Issues = "https://github.com/sam-tritto/bayesian-cortex/issues"
Changelog = "https://github.com/sam-tritto/bayesian-cortex/blob/main/CHANGELOG.md"

[dependency-groups]
dev = [
    "pytest>=7.0.0",
    "pytest-cov>=5.0.0",
    "coverage[toml]>=7.0.0",
]

[build-system]
requires = ["uv_build>=0.8.17,<0.9.0"]
build-backend = "uv_build"

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "--tb=short -q"

[tool.coverage.run]
source = ["src/bayesian_cortex"]
omit = ["tests/*", "demo.py"]

[tool.coverage.report]
show_missing = true
skip_covered = false
fail_under = 63
